docs: fix install coordinate, add badges, compat note, fork attribution